--- a/Architecture/app/src/main/res/layout/activity_add_note.xml
+++ b/Architecture/app/src/main/res/layout/activity_add_note.xml
@@ -12,19 +12,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Title"
+        android:textStyle="italic"
         android:inputType="text" />
     <EditText
         android:id="@+id/edit_text_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Description"
+        android:textStyle="italic"
         android:inputType="textMultiLine" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Priority:"
+        android:text="Chapter:"
         android:textAppearance="@android:style/TextAppearance.Medium" />
+
     <NumberPicker
         android:id="@+id/number_picker_priority"
         android:layout_width="wrap_content"
