--- a/quizzApp/app/src/main/res/layout/activity_quizz.xml
+++ b/quizzApp/app/src/main/res/layout/activity_quizz.xml
@@ -12,7 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Score: 0"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:freezesText="true"/>
 
     <TextView
         android:id="@+id/text_view_question_count"
@@ -20,7 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/text_view_score"
         android:text="Question: 1/x"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:freezesText="true"/>
 
     <TextView
         android:id="@+id/text_view_countdown"
@@ -30,7 +32,8 @@
         android:text="00:30"
         android:textColor="@android:color/black"
         android:textSize="40sp"
-        android:layout_alignParentRight="true" />
+        android:layout_alignParentRight="true"
+        android:freezesText="true"/>
 
     <TextView
         android:id="@+id/text_view_question"
@@ -42,7 +45,8 @@
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="20sp"
-        android:gravity="center_horizontal" />
+        android:gravity="center_horizontal"
+        android:freezesText="true"/>
 
     <RadioGroup
         android:id="@+id/radio_group"
@@ -54,19 +58,22 @@
             android:id="@+id/radio_button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Option 1" />
+            android:text="Option 1"
+            android:freezesText="true"/>
 
         <RadioButton
             android:id="@+id/radio_button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Option 2" />
+            android:text="Option 2"
+            android:freezesText="true"/>
 
         <RadioButton
             android:id="@+id/radio_button3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Option 3" />
+            android:text="Option 3"
+            android:freezesText="true"/>
     </RadioGroup>
 
     <Button
@@ -75,5 +82,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/radio_group"
         android:layout_marginTop="16dp"
-        android:text="Confirm" />
+        android:text="Confirm"
+        android:freezesText="true"/>
 </RelativeLayout>
