--- a/FuckingDo/app/src/main/res/layout/activity_add_to_do.xml
+++ b/FuckingDo/app/src/main/res/layout/activity_add_to_do.xml
@@ -7,14 +7,14 @@
     tools:context=".AddToDoActivity">
 
     <EditText
-        android:id="@+id/textView2"
+        android:id="@+id/toDoEditTex"
         android:layout_width="325dp"
         android:layout_height="52dp"
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
-        android:text="Budget:"
+        android:text="note :"
         android:textAppearance="?android:textAppearanceMedium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,7 +24,7 @@
         app:layout_constraintVertical_bias="0.237" />
 
     <CheckBox
-        android:id="@+id/checkBox"
+        android:id="@+id/updateChkBoc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="CheckBox"
@@ -32,17 +32,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/toDoEditTex"
         app:layout_constraintVertical_bias="0.224" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/AddTodoBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox" />
+        app:layout_constraintTop_toBottomOf="@+id/updateChkBoc" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
