--- a/FuckingDo/app/src/main/res/layout/activity_main.xml
+++ b/FuckingDo/app/src/main/res/layout/activity_main.xml
@@ -9,16 +9,16 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"/>
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+       <ListView
+           android:id="@+id/myNotes"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"/>
 
-    </com.google.android.material.appbar.AppBarLayout>
+
+
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
@@ -28,5 +28,7 @@
         android:layout_margin="@dimen/fab_margin"
         android:tint="#FFFFFF"
         app:srcCompat="@android:drawable/ic_input_add" />
+
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
