--- a/find-Repo/app/src/main/res/layout/activity_display_repo.xml
+++ b/find-Repo/app/src/main/res/layout/activity_display_repo.xml
@@ -6,4 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".DisplayRepoActivity">
 
+
+    <ListView
+        android:id="@+id/displayReporList"
+        android:layout_width="409dp"
+        android:layout_height="729dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
