--- a/find-Repo/app/src/main/res/layout/repo_list_layout.xml
+++ b/find-Repo/app/src/main/res/layout/repo_list_layout.xml
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.057" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/repoImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toStartOf="@+id/projectRepo"
