--- a/PluralSightKotlin/app/src/main/res/menu/menu_main.xml
+++ b/PluralSightKotlin/app/src/main/res/menu/menu_main.xml
@@ -4,8 +4,10 @@
     tools:context="com.e.pluralsight_kotlin.MainActivity">
     <item
         android:id="@+id/action_next"
+        android:icon="@android:drawable/ic_media_next"
         android:orderInCategory="100"
-        android:title="Next" />
+        android:title="Next"
+        app:showAsAction="ifRoom|withText" />
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="101"
