--- a/PluralSightKotlin/app/src/main/res/menu/menu_main.xml
+++ b/PluralSightKotlin/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.e.pluralsight_kotlin.MainActivity">
+    tools:context="com.e.pluralsight_kotlin.NoteActivity">
     <item
         android:id="@+id/action_next"
         android:icon="@android:drawable/ic_media_next"
