--- a/PluralSightKotlin/app/src/main/res/values/colors.xml
+++ b/PluralSightKotlin/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#070707</color>
     <color name="colorPrimaryDark">#121213</color>
-    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorAccent">#0E0000</color>
 </resources>
