--- a/PluralSightKotlin/app/src/main/res/layout/item_course_list.xml
+++ b/PluralSightKotlin/app/src/main/res/layout/item_course_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="401dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cardCornerRadius="4dp"
         app:cardElevation="4dp"
@@ -14,8 +14,8 @@
         app:contentPadding="16dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="394dp"
-            android:layout_height="75dp">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/imageView"
@@ -23,37 +23,26 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginEnd="8dp"
+                android:tint="@color/pluralsight_orange"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@android:drawable/ic_menu_slideshow"
-                app:tint="@color/design_default_color_error" />
+                app:layout_constraintTop_toBottomOf="@+id/textCourse"
+                app:srcCompat="@drawable/ic_menu_slideshow" />
 
             <TextView
                 android:id="@+id/textCourse"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="TextView"
+                android:textAlignment="center"
+                android:textAppearance="@style/CourseTitle"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/textTitle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="TextView"
-                android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
-                app:layout_constraintTop_toBottomOf="@+id/textCourse" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
