--- a/PluralSightKotlin/app/src/main/res/menu/menu_main.xml
+++ b/PluralSightKotlin/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.e.pluralsight_kotlin.NoteActivity">
+    tools:context="com.jwhh.notes.NoteActivity">
     <item
         android:id="@+id/action_next"
-        android:icon="@android:drawable/ic_media_next"
+        android:icon="@drawable/ic_forward_white_24dp"
         android:orderInCategory="100"
         android:title="Next"
         app:showAsAction="ifRoom|withText" />
